adding parameters in swagger.json
